# k8s-lq

./: README.md
dj-backend-lq-main/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
dj-backend-lq-main/.github/deploy/: app-spec-prod.yaml  app-spec-qa.yaml
dj-backend-lq-main/.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-prod.yml  deploy-qa.yml
dj-backend-lq-main/apps/activities/: models.py  urls.py  views.py
dj-backend-lq-main/apps/authentication/: admin.py  apps.py  enums.py  models.py  schema.py  services.py  signals.py  urls.py  views.py
dj-backend-lq-main/apps/core/: admin.py  middlewares.py  models.py  schema.py  views.py
dj-backend-lq-main/apps/files/: config.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
dj-backend-lq-main/apps/tasks/: README.md  __init__.py
dj-backend-lq-main/config/: __init__.py  adapters.py  asgi.py  celery.py  db_router.py  email_backend.py  graphql_depth.py  health.py  schema.py  settings.py  urls.py
dj-backend-lq-main/config/settings/: __init__.py  apps.py  auth.py  base.py  cache.py  celery.py  database.py  internationalization.py  logging.py  media_storage.py  realtime_jwt.py  resend.py  security.py  sentry.py  templates.py  test.py  third_party.py  user_model.py
dj-backend-lq-main/docker/: entrypoint.sh
dj-backend-lq-main/docs/: RUN_WITH_DOCKER.md  schema_new.sql
dj-backend-lq-main/libs/utils/: main.py
dj-backend-lq-main/scripts/: generate_realtime_jwt_keys.sh
dj-backend-lq-main/tests/: conftest.py  test_health_checks.py  test_manage.py
dj-backend-lq-main/tests/tests_config/: test_urls.py
dj-backend-lq-main/tests/tests_tasks/: test_tasks.py
frontend-lq-main/: Makefile  (+15 more)
lq-bot-main/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
lq-bot-main/.github/: CODEOWNERS  dependabot.yml
lq-bot-main/.github/deploy/: app-spec-prod.yaml  app-spec-qa.yaml
lq-bot-main/.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  pr-checks.yml
lq-bot-main/docs/: AGREGAR_PROVEEDORES.md  ARQUITECTURA_MULTI_PROVEEDOR.md  CLIENTE_BOTO3.md  EJEMPLOS_PROVEEDORES.md  EJEMPLO_USO.md  ENDPOINTS.md  ENDPOINTS_MIGRACION.md  MIGRACION_PROMPTS.md  MULTI_AGENT_MANAGER.md
lq-bot-main/docs/ci-cd/: CICD_ARCHITECTURE.md  CICD_QUICKSTART.md  CICD_SETUP.md  CI_CD_SETUP_COMPLETE.md  README.md
lq-bot-main/prompts/conversations/: suggestions_response_schema.json
lq-bot-main/scripts/: setup-cicd.sh
lq-bot-main/src/: config.py  container.py
lq-bot-main/src/interfaces/: di_prompt.py
lq-bot-main/src/multi_agent_manager/: __init__.py  exceptions.py  manager.py  models.py
lq-bot-main/src/prompt_manager/: __init__.py  exceptions.py  manager.py  models.py  prompts.py
lq-bot-main/tests/: conftest.py  test_health.py
lq-bot-main/tests/integration/: test_audio_transcription_api.py  test_chat_api.py  test_conversation_start_api.py  test_create_voice_api.py  test_curriculum_api.py  test_text_answer_api.py  test_translation_api.py
lq-bot-main/tests/prompt_manager/: test_dict_content.py  test_engine.py  test_file_repository.py  test_manager.py  test_memory_repository.py  test_preload.py
lq-realtime-service-main/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt
lq-realtime-service-main/.github/: README.md  dependabot.yml
lq-realtime-service-main/app/: __init__.py  auth.py  config.py  main.py  redis_client.py  schemas.py  webhooks.py  websocket_handler.py
lq-realtime-service-main/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DROPLET_DEPLOYMENT.md  GLOBAL_BROADCAST.md  SCALING.md
lq-realtime-service-main/scripts/: setup-droplet.sh
lq-realtime-service-main/tests/: conftest.py  test_api.py  test_auth.py  test_schemas.py
(+578 files in other folders)
