[project]
name = "lq-bot"
version = "0.1.0"
description = "LQ Bot scaffold (FastAPI + Hexagonal Architecture) with uv, Ruff, pytest"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Martin Ubaque" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "openai>=2.8.1",
  "dependency-injector>=4.41.0",
  "httpx>=0.27.0",
  "boto3>=1.41.4",
  "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "anyio>=4.0.0",
  "ruff>=0.6.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
